Package_Tools/include-C/libxml2/libxml/in_arbeit/fertig/xmlwriter.h

    typedef xmlTextWriter *xmlTextWriterPtr;
/*
 * DTD element definition
 */
    extern int 
        xmlTextWriterStartDTDElement(xmlTextWriterPtr writer,
                                     const xmlChar * name);
    extern int  xmlTextWriterEndDTDElement(xmlTextWriterPtr
                                                     writer);
/*
 * DTD element definition conveniency functions
 */
    extern int 
        xmlTextWriterWriteFormatDTDElement(xmlTextWriterPtr writer,
                                           const xmlChar * name,
                                           const char *format, ...)
					   ;
    extern int 
        xmlTextWriterWriteVFormatDTDElement(xmlTextWriterPtr writer,
                                            const xmlChar * name,
                                            const char *format,
                                            va_list argptr)
					    ;
    extern int  xmlTextWriterWriteDTDElement(xmlTextWriterPtr
                                                       writer,
                                                       const xmlChar *
                                                       name,
                                                       const xmlChar *
                                                       content);
/*
 * DTD attribute list definition
 */
    extern int 
        xmlTextWriterStartDTDAttlist(xmlTextWriterPtr writer,
                                     const xmlChar * name);
    extern int  xmlTextWriterEndDTDAttlist(xmlTextWriterPtr
                                                     writer);
/*
 * DTD attribute list definition conveniency functions
 */
    extern int 
        xmlTextWriterWriteFormatDTDAttlist(xmlTextWriterPtr writer,
                                           const xmlChar * name,
                                           const char *format, ...)
					   ;
    extern int 
        xmlTextWriterWriteVFormatDTDAttlist(xmlTextWriterPtr writer,
                                            const xmlChar * name,
                                            const char *format,
                                            va_list argptr)
					    ;
    extern int  xmlTextWriterWriteDTDAttlist(xmlTextWriterPtr
                                                       writer,
                                                       const xmlChar *
                                                       name,
                                                       const xmlChar *
                                                       content);
/*
 * DTD entity definition
 */
    extern int 
        xmlTextWriterStartDTDEntity(xmlTextWriterPtr writer,
                                    int pe, const xmlChar * name);
    extern int  xmlTextWriterEndDTDEntity(xmlTextWriterPtr
                                                    writer);
/*
 * DTD entity definition conveniency functions
 */
    extern int 
        xmlTextWriterWriteFormatDTDInternalEntity(xmlTextWriterPtr writer,
                                                  int pe,
                                                  const xmlChar * name,
                                                  const char *format, ...)
						  ;
    extern int 
        xmlTextWriterWriteVFormatDTDInternalEntity(xmlTextWriterPtr writer,
                                                   int pe,
                                                   const xmlChar * name,
                                                   const char *format,
                                                   va_list argptr)
						   ;
    extern int 
        xmlTextWriterWriteDTDInternalEntity(xmlTextWriterPtr writer,
                                            int pe,
                                            const xmlChar * name,
                                            const xmlChar * content);
    extern int 
        xmlTextWriterWriteDTDExternalEntity(xmlTextWriterPtr writer,
                                            int pe,
                                            const xmlChar * name,
                                            const xmlChar * pubid,
                                            const xmlChar * sysid,
                                            const xmlChar * ndataid);
    extern int 
        xmlTextWriterWriteDTDExternalEntityContents(xmlTextWriterPtr
                                                    writer,
                                                    const xmlChar * pubid,
                                                    const xmlChar * sysid,
                                                    const xmlChar *
                                                    ndataid);
    extern int  xmlTextWriterWriteDTDEntity(xmlTextWriterPtr
                                                      writer, int pe,
                                                      const xmlChar * name,
                                                      const xmlChar *
                                                      pubid,
                                                      const xmlChar *
                                                      sysid,
                                                      const xmlChar *
                                                      ndataid,
                                                      const xmlChar *
                                                      content);
/*
 * DTD notation definition
 */
    extern int 
        xmlTextWriterWriteDTDNotation(xmlTextWriterPtr writer,
                                      const xmlChar * name,
                                      const xmlChar * pubid,
                                      const xmlChar * sysid);
/*
 * Indentation
 */
    extern int 
        xmlTextWriterSetIndent(xmlTextWriterPtr writer, int indent);
    extern int 
        xmlTextWriterSetIndentString(xmlTextWriterPtr writer,
                                     const xmlChar * str);
    extern int 
        xmlTextWriterSetQuoteChar(xmlTextWriterPtr writer, xmlChar quotechar);
/*
 * misc
 */
    extern int  xmlTextWriterFlush(xmlTextWriterPtr writer);