Package_Tools/pas_units/xml2/xmlwriter.pas


function xmlTextWriterStartDTDElement(writer: TxmlTextWriterPtr; Name: PxmlChar): longint; cdecl; external libxml2;
function xmlTextWriterEndDTDElement(writer: TxmlTextWriterPtr): longint; cdecl; external libxml2;
function xmlTextWriterWriteFormatDTDElement(writer: TxmlTextWriterPtr; Name: PxmlChar; format: pchar; args: array of const): longint; cdecl; external libxml2;
function xmlTextWriterWriteFormatDTDElement(writer: TxmlTextWriterPtr; Name: PxmlChar; format: pchar): longint; cdecl; external libxml2;
function xmlTextWriterWriteVFormatDTDElement(writer: TxmlTextWriterPtr; Name: PxmlChar; format: pchar; argptr: Tva_list): longint; cdecl; external libxml2;
function xmlTextWriterWriteDTDElement(writer: TxmlTextWriterPtr; Name: PxmlChar; content: PxmlChar): longint; cdecl; external libxml2;
function xmlTextWriterStartDTDAttlist(writer: TxmlTextWriterPtr; Name: PxmlChar): longint; cdecl; external libxml2;
function xmlTextWriterEndDTDAttlist(writer: TxmlTextWriterPtr): longint; cdecl; external libxml2;
function xmlTextWriterWriteFormatDTDAttlist(writer: TxmlTextWriterPtr; Name: PxmlChar; format: pchar; args: array of const): longint; cdecl; external libxml2;
function xmlTextWriterWriteFormatDTDAttlist(writer: TxmlTextWriterPtr; Name: PxmlChar; format: pchar): longint; cdecl; external libxml2;
function xmlTextWriterWriteVFormatDTDAttlist(writer: TxmlTextWriterPtr; Name: PxmlChar; format: pchar; argptr: Tva_list): longint; cdecl; external libxml2;
function xmlTextWriterWriteDTDAttlist(writer: TxmlTextWriterPtr; Name: PxmlChar; content: PxmlChar): longint; cdecl; external libxml2;
function xmlTextWriterStartDTDEntity(writer: TxmlTextWriterPtr; pe: longint; Name: PxmlChar): longint; cdecl; external libxml2;
function xmlTextWriterEndDTDEntity(writer: TxmlTextWriterPtr): longint; cdecl; external libxml2;
function xmlTextWriterWriteFormatDTDInternalEntity(writer: TxmlTextWriterPtr; pe: longint; Name: PxmlChar; format: pchar; args: array of const): longint; cdecl; external libxml2;
function xmlTextWriterWriteFormatDTDInternalEntity(writer: TxmlTextWriterPtr; pe: longint; Name: PxmlChar; format: pchar): longint; cdecl; external libxml2;
function xmlTextWriterWriteVFormatDTDInternalEntity(writer: TxmlTextWriterPtr; pe: longint; Name: PxmlChar; format: pchar; argptr: Tva_list): longint; cdecl; external libxml2;
function xmlTextWriterWriteDTDInternalEntity(writer: TxmlTextWriterPtr; pe: longint; Name: PxmlChar; content: PxmlChar): longint; cdecl; external libxml2;
function xmlTextWriterWriteDTDExternalEntity(writer: TxmlTextWriterPtr; pe: longint; Name: PxmlChar; pubid: PxmlChar; sysid: PxmlChar;
  ndataid: PxmlChar): longint; cdecl; external libxml2;
function xmlTextWriterWriteDTDExternalEntityContents(writer: TxmlTextWriterPtr; pubid: PxmlChar; sysid: PxmlChar; ndataid: PxmlChar): longint; cdecl; external libxml2;
function xmlTextWriterWriteDTDEntity(writer: TxmlTextWriterPtr; pe: longint; Name: PxmlChar; pubid: PxmlChar; sysid: PxmlChar;
  ndataid: PxmlChar; content: PxmlChar): longint; cdecl; external libxml2;
function xmlTextWriterWriteDTDNotation(writer: TxmlTextWriterPtr; Name: PxmlChar; pubid: PxmlChar; sysid: PxmlChar): longint; cdecl; external libxml2;
function xmlTextWriterSetIndent(writer: TxmlTextWriterPtr; indent: longint): longint; cdecl; external libxml2;
function xmlTextWriterSetIndentString(writer: TxmlTextWriterPtr; str: PxmlChar): longint; cdecl; external libxml2;
function xmlTextWriterSetQuoteChar(writer: TxmlTextWriterPtr; quotechar: TxmlChar): longint; cdecl; external libxml2;
function xmlTextWriterFlush(writer: TxmlTextWriterPtr): longint; cdecl; external libxml2;

// === Konventiert am: 2-3-25 17:35:25 ===


implementation



end.
